tests/Rules/Forms/Fixtures/valid/input_with_aria_variable.html.twig
<html>
<body>
<input type="text" aria-label="{{ dynamic_label }}">
</body>
</html>
