tests/Rules/Forms/Fixtures/invalid/input_submit_no_value_or_aria.html.twig
{# 1 errors #}
<input type="submit">
